# pytabkit

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: testing.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/bench/: 00_installation.md  01_running_the_benchmark.md  02_stored_data.md  03_code.md  adding_models.md  download_results.md  refine_then_calibrate.md  using_the_scheduler.md
docs/source/models/: 00_overview.md  01_sklearn_interfaces.rst  02_hpo.md  03_training_implementation.md  examples.md  nn_classes.md  quantile_reg.md
examples/: tutorial_notebook.ipynb
original_requirements/: conda_env_2024_06_25.yml  conda_env_2024_10_28.yml  conda_env_2025_01_15.yml  requirements_2024_06_25.txt
pytabkit/: __about__.py  __init__.py
pytabkit/bench/alg_wrappers/: general.py  interface_wrappers.py
pytabkit/bench/data/: common.py  get_uci.py  import_talent_benchmark.py  import_tasks.py  paths.py  tasks.py  uci_file_ops.py
pytabkit/bench/eval/: analysis.py  colors.py  evaluation.py  plotting.py  runtimes.py  tables.py
pytabkit/bench/run/: results.py  task_execution.py
pytabkit/bench/scheduling/: execution.py  jobs.py  resource_manager.py  resources.py  schedulers.py
pytabkit/models/: torch_utils.py  utils.py
pytabkit/models/alg_interfaces/: alg_interfaces.py  autogluon_model_interfaces.py  base.py  calibration.py  catboost_interfaces.py  ensemble_interfaces.py  lightgbm_interfaces.py  nn_interfaces.py  other_interfaces.py  resource_computation.py  resource_params.py  rtdl_interfaces.py  sub_split_interfaces.py  tabm_interface.py  tabr_interface.py  xgboost_interfaces.py  xrfm_interfaces.py
pytabkit/models/data/: conversion.py  data.py  nested_dict.py  splits.py
pytabkit/models/hyper_opt/: coord_opt.py  hyper_optimizers.py
pytabkit/models/nn_models/: activations.py  base.py  categorical.py  models.py  nn.py  pipeline.py  rtdl_num_embeddings.py  rtdl_resnet.py  tabm.py  tabr.py  tabr_context_freeze.py  tabr_lib.py
pytabkit/models/optim/: adopt.py  optimizers.py
pytabkit/models/sklearn/: default_params.py  sklearn_base.py  sklearn_interfaces.py
pytabkit/models/training/: coord.py  lightning_callbacks.py  lightning_modules.py  metrics.py  nn_creator.py  scheduling.py
scripts/: analyze_hpo_best_params.py  analyze_tasks.py  check_missing_values.py  copy_alg.py  copy_algs.py  create_plots_and_tables.py  create_probclass_plots.py  create_xrfm_ablations_table.py  custom_paths.py.default  download_data.py  estimate_resource_params.py  get_sklearn_names.py  make_plot_animation.py  meta_hyperopt.py  move_algs.py  move_many_algs.py  print_complete_results.py  print_runtimes.py  ray_slurm_launch.py  ray_slurm_template.sh  rename_alg.py  rename_tag.py  run_evaluation.py  run_experiments.py  run_experiments_unused.py  run_probclass_experiments.py  run_single_task.py  run_slurm.py  run_time_measurement.py  run_xrfm_large_ablations.py
tests/: test_bench.py  test_ensemble.py  test_metrics.py  test_resnet.py  test_rtdl_nns.py  test_sklearn_interfaces.py  test_tabr.py  test_variants.py
